--- a/public/sass/partials/_shell.scss
+++ b/public/sass/partials/_shell.scss
@@ -14,7 +14,9 @@
     padding: .5em;
     background-color: #FFF3D1;   
     border: 2px solid  #1A1496;
-    @include border-radius(5px);   
+    margin-right: 1em;
+    @include border-radius(5px);  
+    cursor: pointer; 
   }
   
   nav li a {
